--- a/style.css
+++ b/style.css
@@ -10,3 +10,25 @@
     font-size: 62.5%;
     font-family: "Roboto";
 }
+
+.box {
+    padding: 2.9rem 4.8rem;
+    background: #363447;
+    box-shadow: 0.3rem 0.4rem 2.6rem;
+    border-radius: 1.6rem;
+}
+
+#app {
+    display: grid;
+    grid-template-columns: max-content max-content max-content;
+    column-gap: 3.2rem;
+    row-gap: 5.9rem;
+    width: 100vw;
+    height: 100vh;
+
+    padding: 11.2rem 12.3rem;
+}
+
+.box:nth-child(4) {
+    grid-column: 1/4;
+}
