--- a/style.css
+++ b/style.css
@@ -8,27 +8,74 @@
 
 :root {
     font-size: 62.5%;
-    font-family: "Roboto";
+    font-family: "Inter";
+}
+
+.grid {
+    display: grid;
 }
 
 .box {
     padding: 2.9rem 4.8rem;
     background: #363447;
-    box-shadow: 0.3rem 0.4rem 2.6rem;
+    box-shadow: 0.3rem 0.4rem 2.6rem rgba(0, 0, 0, 0.25);
     border-radius: 1.6rem;
+    color: white;
+    line-height: 160%;
 }
 
 #app {
-    display: grid;
-    grid-template-columns: max-content max-content max-content;
+    background-color: #292738;
+    grid-template-columns: 29.6rem max-content max-content;
+    grid-template-rows: max-content;
     column-gap: 3.2rem;
     row-gap: 5.9rem;
-    width: 100vw;
-    height: 100vh;
+
+    width: fit-content;
+    height: fit-content;
+    min-width: 100vw;
+    min-height: 100vh;
+
 
     padding: 11.2rem 12.3rem;
+    place-content: center;
+}
+
+.nps {
+    gap: 3.2rem;
 }
 
 .box:nth-child(4) {
     grid-column: 1/4;
+}
+
+.top {
+    font-weight: 600;
+    font-size: 2.4rem;
+    text-align: center;
+}
+.nps .middle {
+    height: 19.7rem;
+    place-content: center;
+    justify-items: center;
+    gap: 1.6rem;
+    color: #81FBB8;
+}
+
+.nps .bottom {
+    font-weight: 500;
+    font-size: 1.4rem;
+    gap: 1rem;
+}
+
+.bottom {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    margin-top: auto;
+}
+
+.bottom .item {
+    display: flex;
+    gap: 1rem;
 }
