cores por variaveis

--- a/style.css
+++ b/style.css
@@ -63,8 +63,6 @@
 }
 
 .nps .bottom {
-    font-weight: 500;
-    font-size: 1.4rem;
     gap: 1rem;
 }
 
@@ -73,9 +71,31 @@
     gap: 2rem;
     justify-content: center;
     margin-top: auto;
+    font-weight: 500;
+    font-size: 1.4rem;
 }
 
 .bottom .item {
     display: flex;
+    align-items: center;
     gap: 1rem;
+}
+
+.bottom .item span:nth-child(1) {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+}
+
+.bottom .item span {
+    --bg-color: #4A4556;
+}
+
+.bottom .item span:nth-child(1)::before {
+    content: "";
+    width: 1.5rem;
+    height: 1.5rem;
+    display: block;
+    background: var(--bg-color);
+    border-radius: 999px;
 }
