--- a/style.css
+++ b/style.css
@@ -99,3 +99,31 @@
     background: var(--bg-color);
     border-radius: 999px;
 }
+
+.middle {
+    display: grid;
+    place-content: center;
+}
+
+/* SVG */
+svg {
+    --percentage: 0;
+    width: 19.7rem;
+    height: 19.7rem;
+    transform: rotate(-90deg);
+}
+
+svg circle {
+    stroke-dasharray: 618;
+    stroke-dashoffset: 618;
+    stroke-width: 35;
+    fill: none;
+}
+
+svg circle:nth-child(1) {
+    stroke-dashoffset: 0;
+}
+
+svg circle:nth-child(2) {
+    stroke-dashoffset: calc(618 - (618 * var(--percentage))/100);
+}
