--- a/style.css
+++ b/style.css
@@ -126,4 +126,14 @@ svg circle:nth-child(1) {
 
 svg circle:nth-child(2) {
     stroke-dashoffset: calc(618 - (618 * var(--percentage))/100);
+    stroke-linecap: round;
+    animation: progress 1s ease-in-out backwards;
+    animation-delay: 1s;
+}
+
+@keyframes progress {
+    0% {
+        stroke-dasharray: 618;
+        stroke-dashoffset: 618;
+    }
 }
