parte de cima pronta

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
 .middle {
     display: grid;
     place-content: center;
+    position: relative;
 }
 
 /* SVG */
@@ -136,4 +137,16 @@ svg circle:nth-child(2) {
         stroke-dasharray: 618;
         stroke-dashoffset: 618;
     }
+}
+
+.middle .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.content h3 {
+    font-size: 3.4rem;
 }
