--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@
 
 :root {
     font-size: 62.5%;
+}
+
+body {
+    font-size: 1.6rem;
     font-family: "Inter";
+    background: #292738;
 }
 
 .grid {
@@ -21,36 +26,28 @@
 
 .box {
     padding: 2.9rem 4.8rem;
+
     background: #363447;
     box-shadow: 0.3rem 0.4rem 2.6rem rgba(0, 0, 0, 0.25);
     border-radius: 1.6rem;
     color: white;
     line-height: 160%;
+
+    gap: 3.2rem;
 }
 
 #app {
-    background-color: #292738;
-    grid-template-columns: 29.6rem max-content max-content;
-    grid-template-rows: max-content;
     column-gap: 3.2rem;
     row-gap: 5.9rem;
 
     width: fit-content;
-    height: fit-content;
-    min-width: 100vw;
     min-height: 100vh;
+    height: fit-content;
 
+    margin: auto;
 
-    padding: 11.2rem 12.3rem;
     place-content: center;
-}
-
-.nps {
-    gap: 3.2rem;
-}
-
-.box:nth-child(4) {
-    grid-column: 1/4;
+    padding: 3.2rem;
 }
 
 .top {
@@ -85,18 +82,6 @@
     font-size: 1.4rem;
 }
 
-.nps .middle {
-    height: 19.7rem;
-    place-content: center;
-    justify-items: center;
-    gap: 1.6rem;
-    color: #81FBB8;
-}
-
-.nps .bottom {
-    gap: 1rem;
-}
-
 .bottom .item {
     display: flex;
     align-items: center;
@@ -110,7 +95,7 @@
 }
 
 .bottom .item span {
-    --bg-color: #4A4556;
+    --bg-color: #4a4556;
 }
 
 .bottom .item span:nth-child(1)::before {
@@ -119,11 +104,25 @@
     height: 1.5rem;
     display: block;
     background: var(--bg-color);
-    border-radius: 999px;
+    border-radius: 99.9rem;
 }
 
+.nps {
+    gap: 3.2rem;
+}
 
-/* SVG */
+.nps .middle {
+    height: 19.7rem;
+    place-content: center;
+    justify-items: center;
+    gap: 1.6rem;
+    color: #81fbb8;
+}
+
+.nps .bottom {
+    gap: 1rem;
+}
+
 svg {
     --percentage: 0;
     width: 19.7rem;
@@ -143,10 +142,10 @@ svg circle:nth-child(1) {
 }
 
 svg circle:nth-child(2) {
-    stroke-dashoffset: calc(618 - (618 * var(--percentage))/100);
+    stroke-dashoffset: calc(618 - (618 * var(--percentage)) / 100);
     stroke-linecap: round;
-    animation: progress 1s ease-in-out backwards;
-    animation-delay: 1s;
+
+    animation: progress 1s ease-in-out;
 }
 
 @keyframes progress {
@@ -162,24 +161,31 @@ svg circle:nth-child(2) {
 
 .weekly-sell .wrapper {
     display: flex;
+    flex-direction: column;
     gap: 3.2rem;
 }
 
 .weekly-sell .left {
     gap: 3.2rem;
+    grid-auto-flow: column;
+}
+
+.weekly-sell .left,
+.weekly-sell .right {
+    flex: 1;
 }
 
 .left .grid {
-    gap: 8rem;
-    font-size: 2.4rem;
+    gap: 0.8rem;
     font-weight: 500;
+    font-size: 2.4rem;
 }
 
 .left .grid span {
     font-size: 1.4rem;
+    align-items: centetr;
     display: flex;
     gap: 0.4rem;
-    align-items: center;
 }
 
 .left .grid span::before {
@@ -187,16 +193,84 @@ svg circle:nth-child(2) {
     width: 1.5rem;
     height: 1.5rem;
     display: block;
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    clip-path: polygon(50% 0%, 0% 80%, 100% 80%);
 }
 
 .left .most-sell span::before {
-    background: linear-gradient(180deg, #81FBB8 0%, #28C76F 100%);
+    background: linear-gradient(180deg, #81fbb8 0%, #28c76f 100%);
     margin-top: 0.4rem;
 }
 
 .left .less-sell span::before {
-    background: linear-gradient(180deg, #EA5455 0%, #FEB692 100%);
+    background: linear-gradient(180deg, #ea5455 0%, #feb692 100%);
     transform: matrix(1, 0, 0, -1, 0, 0);
     margin-top: 0.6rem;
+}
+
+.bars {
+    display: flex;
+    gap: calc(3vw + 1rem);
+    align-items: flex-end;
+    position: relative;
+}
+
+.bars::before {
+    content: "";
+    display: block;
+    height: 0.3rem;
+    width: 100%;
+    background: #4a4556;
+    border-radius: 99.9rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 0;
+}
+
+.bar-wrapper {
+    display: grid;
+    grid-template-rows: 15.9rem 1.6rem;
+    justify-items: center;
+    gap: 0.5rem;
+    z-index: 1;
+}
+
+.bar {
+    width: 1.5rem;
+    background: linear-gradient(180deg, #90f7ec 0%, #32ccbc 100%);
+    border-radius: 99.9rem;
+
+    height: var(--height);
+    align-self: end;
+
+    animation: up 1.4s;
+}
+
+@keyframes up {
+    0% {
+        height: 0;
+    }
+}
+
+@media (min-width: 100rem) {
+    #app {
+        grid-template-columns: 29.6rem max-content max-content;
+        grid-template-rows: max-content;
+    }
+
+    .box:nth-child(4) {
+        grid-column: 1/4;
+    }
+
+    .weekly-sell .wrapper {
+        flex-direction: row;
+    }
+
+    .weekly-sell .left {
+        grid-auto-flow: initial;
+    }
+
+    .bars {
+        gap: 5.9rem;
+    }
 }
